@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.814 2009-01-13 15:27:28 tr Exp $
+# $Id: CHANGES,v 1.815 2009-01-15 17:19:25 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -85,6 +85,10 @@
     auth support.
 
 2.3.4 (2009/??/??)
+ - (2009/01/15) Fixed bug# 3595 - VacationCheck() of Kernel::System::Time is
+    ignoring different OTRS calendar.
+ - (2009/01/13) Fixed bug# 3542 - Static Stats lose associated perlmodule after
+    editing.
  - (2009/01/10) Fixed bug# 3575 - Framework file get lost after upgrading OTRS
     and reinstalling or uninstalling e. g. ITSM pakages then.
  - (2008/12/08) Fixed bug# 3462 - SMIME crypt and sign functions bail out -
